--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "slugify": "^1.6.6",
-    "validator": "^13.7.0"
+    "slugify": "^1.6.6"
   },
   "engines": {
     "node": ">=14.20.1"
