--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "slugify": "^1.6.6"
   },
   "engines": {
