--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-basic-auth": "^1.2.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "engines": {
     "node": ">=14.20.1"
