--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.7.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.5",
+    "redis": "^4.7.0",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
